# agentic-support-stack

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
agentic-support-stack/: Dockerfile  docker-compose.yml  pyproject.toml
agentic-support-stack/backend/: pyproject.toml
agentic-support-stack/backend/app/application/: analysis_service.py  embeddings_service.py
agentic-support-stack/backend/app/core/: logger.py
agentic-support-stack/backend/app/domain/: models.py
agentic-support-stack/backend/app/infrastructure/: database.py  encryption.py  gemini_client.py
agentic-support-stack/backend/app/web/routers/: __init__.py  atencion_router.py  embeddings_router.py
agentic-support-stack/backend/app/web/schemas/: __init__.py
agentic-support-stack/frontend/app/: main.py
agentic-support-stack/frontend/app/components/: widgets.py
agentic-support-stack/frontend/app/pages/: dashboard.py  login.py
agentic-support-stack/scripts/: check-ports.sh  dev.sh  start.sh
backend/: requirements.txt
backend/app/: main.py
backend/app/application/: atencion_service.py  auth_service.py
backend/app/core/: config.py
backend/app/infrastructure/: database.py  gemini_client.py  repositories.py
backend/app/web/routers/: analysis_router.py  atencion_router.py  auth_router.py  health_router.py
backend/app/web/schemas/: auth_schemas.py
backend/tests/: test_embeddings.py
deploy/: DEPLOY_ORANGEPI.md  docker-compose.prod.yml  setup-orangepi.sh
frontend/: config.toml
frontend/app/: main.py
frontend/app/pages/: dashboard.py  login.py
scripts/: README.md  check-ports.sh  configurar_frontend_url.py  configurar_tz.py  convertir_fechas_frontend.py  dev.sh  fix_db_init.py  start.sh  weblan_sanity.py
tests/: test_gemini_json_extraction.py
